err/robotframework-mobilelibrary.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AppiumLibrary'...
Listing './lib/python3.5/site-packages/AppiumLibrary/keywords'...
Compiling './lib/python3.5/site-packages/AppiumLibrary/keywords/_applicationmanagement.py'...
***   File "./lib/python3.5/site-packages/AppiumLibrary/keywords/_applicationmanagement.py", line 179
    print self._current_application().contexts
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AppiumLibrary/keywords/_element.py'...
***   File "./lib/python3.5/site-packages/AppiumLibrary/keywords/_element.py", line 312
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AppiumLibrary/keywords/_mobilekeywords.py'...
***   File "./lib/python3.5/site-packages/AppiumLibrary/keywords/_mobilekeywords.py", line 578
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AppiumLibrary/keywords/_runonfailure.py'...
***   File "./lib/python3.5/site-packages/AppiumLibrary/keywords/_runonfailure.py", line 63
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AppiumLibrary/keywords/keywordgroup.py'...
***   File "./lib/python3.5/site-packages/AppiumLibrary/keywords/keywordgroup.py", line 20
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AppiumLibrary/locators'...
Listing './lib/python3.5/site-packages/AppiumLibrary/utils'...
Listing './lib/python3.5/site-packages/AppiumLibrary/utils/events'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robotframework_mobilelibrary-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
